# poetry-dynamic-versioning

dyn-demo/: pyproject.toml
dyn-demo/lib-a/: pyproject.toml
